Fix mobile img overlap

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,8 @@
+:root {
+    --site-width: 90vw;
+    --white: #ffffff;
+  }
+
 html,
 body {
     padding: 0;
