--- a/styles/site.css
+++ b/styles/site.css
@@ -21,7 +21,7 @@ section > p {
 }
 
 p > img {
-  max-width: 95vw;
+  max-width: var(--site-width);
   height: auto;
   width: auto;
   max-height: 95vh;
@@ -34,7 +34,7 @@ p > img {
 .content {
   margin-left: auto; 
   margin-right: auto; 
-  max-width: 90vw; 
+  max-width: var(--site-width); 
   padding: 2.625rem 0.875rem;
 }
 
@@ -44,9 +44,8 @@ p > img {
 
 .site-title {
   color: white;
-  margin-bottom: 3rem;
+  /* margin-bottom: 3rem; */
   box-shadow: none;
-  margin-top: 2rem;
   font-size: 2.5rem;
 }
 
